--- a/public/Directives/codecademy/broadwayHome.html
+++ b/public/Directives/codecademy/broadwayHome.html
@@ -54,7 +54,7 @@
                 <div class='row'>
                   <div class='col-sm-12 text-center'>
                     <h2>Deploy</h2>
-                    <p>Use modern tools to turn your design into a web site</p>
+                    <p>Put your website out there for the world</p>
                     <a class='btn btn-default' href="#">Learn More</a>
                   </div><!--End of col-sm-12-->
                 </div><!--End of row-->
